Bug 29957 - Weborder_mobile: Quantity is cut off if it is not 1

--- a/skins/weborder_mobile/css/modifiers.css
+++ b/skins/weborder_mobile/css/modifiers.css
@@ -71,6 +71,12 @@
     text-indent: .5em;
 }
 
+@-moz-document url-prefix() {
+    .modifier select {
+        text-indent: .2em !important;
+    }
+}
+
 .modifier .mdf_split::before {
     font-family: "FontAwesome";
     font-size: 1.4em;
